好多文件提交

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">MeasureCopy</string>
     <string name="left">左</string>
     <string name="divide_text">divide text</string>
+    <string name="create">创建户型</string>
+    <string name="schedule">我的行程</string>
 </resources>
