--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="divide_text">divide text</string>
     <string name="create">创建户型</string>
     <string name="schedule">我的行程</string>
+    <string name="quotation">我的报价</string>
 </resources>
